Add shortcut for the run and the debug mode.
Still add to integrate a better source path for the debug mode but it works